--- a/porto/css/media.css
+++ b/porto/css/media.css
@@ -50,5 +50,10 @@
 
  /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px) {
-
+header{
+	height: 100vh;
+}
+.section1{
+	height: 100vh;
+}
 }
