--- a/porto/css/fonts.css
+++ b/porto/css/fonts.css
@@ -18,4 +18,10 @@
 	font-style: normal;
 	font-weight: normal;
 }
+@font-face {
+	font-family: "TimesNewRoman";
+	src:	url("../fonts/7454.ttf") format("truetype");
+	font-style: normal;
+	font-weight: normal;
+}
 /* font-family: "RobotoMedium"; */
