--- a/porto/css/main.css
+++ b/porto/css/main.css
@@ -107,6 +107,7 @@ text-align: center;
 	line-height: 1;
 	font-weight: 600;
     font-family: 'Open Sans Condensed', sans-serif;
+  font-family: "TimesNewRoman";
    
 }
 h6{
@@ -116,6 +117,7 @@ h6{
 	text-align: center;
 	text-transform: uppercase;
     font-family: 'Fira Sans', sans-serif;
+    font-family: "TimesNewRoman";
 	font-weight: 100;
 }
 .row-menu{
@@ -165,6 +167,7 @@ h6{
 .reserve p{
 	text-transform: uppercase;
 	font-family: 'Roboto Condensed', sans-serif;
+	font-family: "TimesNewRoman";
 	font-size: 20px;
 	color: #fff;
 }
@@ -172,6 +175,7 @@ h2{
 	text-align: center;
 	font-size: 42px;
 	font-family: 'Fira Sans', sans-serif;
+	font-family: "TimesNewRoman";
 	text-transform: uppercase;
 	display: block;
 }
@@ -220,6 +224,7 @@ border-left: 0.5px solid #2b1e10;
 .for_tabs .tab p{
 	font-size: 21px;
 	font-family: 'Roboto Condensed';
+	font-family: "TimesNewRoman";
 	text-transform: uppercase;
 }
 .content_history p{
@@ -227,6 +232,7 @@ border-left: 0.5px solid #2b1e10;
 	font-size: 19px;
 	letter-spacing: 0.01em;
 	font-family: 'Roboto Condensed';
+	font-family: "TimesNewRoman";
 }
 .content{
 	padding-top: 80px;
