--- a/porto/css/main.css
+++ b/porto/css/main.css
@@ -106,6 +106,7 @@ text-align: center;
 	line-height: 1;
 	font-weight: 600;
     font-family: 'Open Sans Condensed', sans-serif;  
+    font-family: "TimesNewRoman";
 }
 h1 span{
 	font-size: 80px;
