--- a/dance/css/style.css
+++ b/dance/css/style.css
@@ -4,6 +4,7 @@ html, body {
 	padding: 0;
 	font-family: "Caros";
 	vertical-align: baseline;
+	position: relative;
 
 }
 
@@ -107,6 +108,8 @@ header{
 	list-style-type: none;
 	margin:0;
 	padding: 0;
+	position: relative;
+	z-index: 999;
 }
 
 .nav ul li{
@@ -175,6 +178,7 @@ header{
 }
 .news1, .news2, .news3{
 	height: 375px;
+	transition: 0.5s ease-in all;
 }
 .news1{
 	 border-bottom:2px solid #99ccff;	
@@ -191,6 +195,13 @@ header{
  .news2:hover,
  .news3:hover{
  	border-bottom: none;
+	transform: scale(1.1);
+	background: #fff;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 12px 29px 0px rgba(60, 30, 146, 0.07);
+  z-index: 3000;
+  transition: 0.5s ease-in all;
 
  }
 .news1 h3 {
@@ -396,6 +407,8 @@ margin-top: 30px;}
 }
 .dzizh2{
 	padding-top: 33px;
+	padding-bottom: 35px;
+	background: #fcfcfe;
 }
 .sect4__text{
 	padding-top: 7px;
@@ -439,7 +452,7 @@ top: -40px;
 z-index: 1000;
 }
 .dzizh1{
-	margin-top: 65px;
+	margin-top: 30px;
 }
 .section4 .container{
 	background: url("../images/divider.png") 46.1% 260px no-repeat, 
@@ -641,8 +654,530 @@ margin-top: 70px;
     margin-left: -260px;
     margin-top: -160px;
     z-index: 100;
+}
+.professionals{
+	background: url("../images/professionals_bg.png") no-repeat 50% 0px;
+	-webkit-background-size: 100% auto;
+	background-size: 100% auto;
+}
+.sportsman_profile1{
+	width: 49%;
+	margin-right: 1%;
+	padding-top: 185px;
+	padding-left: 25px;
+	padding-right: 25px;
+	padding-bottom: 35px;
+	background: url("../images/sportsman1_bg.png") no-repeat 50% 0px #fff;
+	border-radius: 10px;
+	box-shadow: 0px 5px 30px 5px rgba(0,0,0,0.1);
+	-webkit-background-size: 100% auto;
+	background-size: 100% auto;
 
+}
+.sportsman_profile2{
+	width: 49%;
+	margin-left: 1%;
+	padding-top: 185px;
+	padding-left: 25px;
+	padding-right: 25px;
+	padding-bottom: 35px;
+	background: url("../images/sportsman2_bg.png") no-repeat 50% 0px #fff;
+	border-radius: 10px;
+    box-shadow: 0px 5px 40px 2px rgba(0,0,0,0.1);
+	-webkit-background-size: 100% auto;
+	background-size: 100% auto;
+}
+
+.professionals h2{
+  font-size: 34px;
+  font-family: "Caros ExtraLight";
+  color: rgb(60, 30, 146);
+  line-height: 1.412;
+  margin-top: 80px;
+  margin-bottom: 55px;
+}
+.sportsman_avatar{
+	display: inline-block;
+	width: 130px;
+}
+.sportsman_name{
+  font-size: 20px;
+  font-family: "Caros Medium";
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
+  text-align: left;
+  margin-bottom: 40px;
+  margin-top: 0;
+}
+.sportsman_who{
+  font-size: 14px;
+  font-family: "Caros Medium";
+  color: rgb(60, 30, 146);
+  line-height: 1.2;
+  text-align: left;
+  margin: 0;
+}
+.sportsman_descr{
+	display: inline-block;
+	width: 280px;
+	padding-left: 35px;
+    vertical-align: top;
+    padding-top: 25px;
+
+}
+.for_sportsman_text{
+	margin-top: 20px;
+	width: 100%;
+    background: url("../images/sportsman_text_bg.png") no-repeat;
+    padding-top: 40px;
+    padding-left: 23px;
+    padding-right: 23px;
+    padding-bottom: 32px;
+    height: 155px;
+    overflow: hidden;
+}
+.sportsman_text{
+  font-size: 15px;
+  font-family: "Roboto";
+  color: rgb(165, 164, 195);
+  line-height: 1.2;
+  text-align: left;
+}
+.for_mans{
+	background: url("../images/for_man_bg.png") no-repeat 10% 100%;
+	-webkit-background-size: 50%;
+	background-size: 50%;
+}
+.for_mans h2{
+  font-size: 34px;
+  font-family: "Caros ExtraLight";
+  color: rgb(231, 21, 141);
+  line-height: 1.412;
+margin-top: 60px;
+margin-bottom: 90px;
+}
+.for_mans h6{
+  font-size: 18px;
+  font-family: "Caros Medium";
+  color: rgb(60, 30, 146);
+  line-height: 1.2;
+  text-align: left;
+  margin-bottom: 70px;
+}
+.for_man_icon{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	height: 100px;
+}
+.for_mans p{
+  font-size: 14px;
+  font-family: "Caros Regular";
+  color: rgb(60, 30, 146);
+  line-height: 1.2;
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 0;
+}
+.for_mans .bottom{
+  font-size: 16px;
+  font-family: "Roboto";
+  color: rgb(165, 164, 195);
+  line-height: 1.2;
+  text-align: left;
+  margin-top: 80px;
+  margin-bottom: 120px;
+}
+
+.our_club{
+	padding-top: 70px;
+	padding-bottom: 75px;
+}
+.our_club h2{
+  font-size: 34px;
+  font-family: "Caros ExtraLight";
+  color: rgb(231, 21, 141);
+  line-height: 1.412;
+margin-bottom: 55px;
+}
+.our_club img{
+	display: block;
+	width: 95%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 30px;
+}
+.our_club p{
+  font-size: 18px;
+  font-family: "Caros Medium";
+  color: rgb(60, 30, 146);
+  line-height: 1.2;
+
+ text-align: center;	vertical-align: middle;
+}
+
+.pink_line h3{
+  font-size: 24px;
+  font-family: "Caros Light";
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
+  text-align: center;  margin: 0;
+}
+.pink_line{
+	padding-top: 50px;
+	padding-bottom: 50px;
+	background: url("../images/pink_bg.png");
+}
+.col-my-2{
+	width: 20%;
+	float: left;
+	    position: relative;
+    min-height: 1px;
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-top: 15px;
+    padding-left: 2px;padding-right: 2px;
+}
+.big_gallery{
+	padding-top: 70px;
+	padding-bottom: 85px;
+}
+.big_gallery img{
+	width: 100%;
+}
+.kids{
+	padding-top: 82px; 
+	background: url("../images/kids_bg.png") no-repeat 50% 0px;
+	padding-bottom: 38px;
+
+}
+.kids h2{
+  font-size: 34px;
+  font-family: "Caros ExtraLight";
+  color: rgb(60, 30, 146);
+  line-height: 1.412;
+margin-bottom: 40px;
+}
+.kids h6{
+  font-size: 18px;
+  font-family: "Caros Medium";
+  color: rgb(231, 21, 141);
+  line-height: 1.2;
+  text-align: left;
+  margin-bottom: 55px;
+
+}
+.kids .name{
+  font-size: 24px;
+  font-family: "Caros Light";
+  color: rgb(60, 30, 146);
+  line-height: 1.2;
+  text-align: left;
+  margin-bottom: 0;
+  margin-top: -10px;
+}
+.kids .container2 .row{
+	padding-top: 46px;
+	background: #fff;
+	padding-top: 45px;
+	padding-bottom: 45px;
+	box-shadow: 0px 5px 30px 5px rgba(0,0,0,0.1);
+	margin-bottom: 32px;
+	border-radius: 10px;
+}
+.kids .container2 button p{
+  font-size: 16px;
+  font-family: "Caros Medium";
+  line-height: 1.2;
+  margin-bottom: 0;
+  margin-top: 0;
+
+
+}
+.kids .container2 button{
+  background-color: rgb(247, 246, 252);
+ display: block;
+ padding-top: 12px;
+ padding-bottom: 12px;
+ padding-left: 20px;
+ padding-right: 20px;
+ border-radius: 20px;
+ border: none;
+margin-top: 20px;
+margin-bottom: 25px;
+}
+.kids p{
+  font-size: 15px;
+  font-family: "Roboto";
+  color: rgb(165, 164, 195);
+  line-height: 1.2;
+  text-align: left;
+}
+.kid{
+	display: block;margin-left: auto;
+	width: 320px;
+}
+.container2 .col-xs-6{
+	padding-left: 60px;
 }
 
 
 
+
+
+.attention{
+	padding-top: 165px;
+	padding-bottom: 165px;
+	background: url("../images/attention_bg.png") no-repeat 50% 0px;
+	-webkit-background-size: cover;
+	background-size: cover;
+}
+.attention h2{
+  font-size: 34px;
+  font-family: "Caros Light";
+  color: rgb(231, 21, 141);
+  line-height: 1.412;
+  margin-bottom: 40px;
+}
+.attention p{
+  font-size: 18px;
+  font-family: "Caros Medium";
+  color: rgb(165, 164, 195);
+  line-height: 1.2;
+  text-align: left;
+}
+.groups{
+	background: #f7f6fc ;
+	padding-top: 75px;
+}
+.groups .group{
+	border-radius: 10px;
+	padding-top: 25px;
+	background: #fff;
+	padding-bottom: 25px;
+}
+.group .name{
+  font-size: 18px;
+  font-family: "Caros Medium";
+  color: rgb(255, 255, 255);
+  line-height: 1.333;
+  text-align: center;
+  margin-bottom: 23px;
+  display: block;
+}
+.groups_logo{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+.groups .group1{
+	background: url("../images/group1_bg.png") no-repeat 50% 0px #fff;
+}
+.groups .group2{
+	background: url("../images/group2_bg.png") no-repeat 50% 0px #fff;
+}
+.groups .group3{
+	background: url("../images/group3_bg.png") no-repeat 50% 0px #fff;
+}
+.groups .group4{
+	background: url("../images/group4_bg.png") no-repeat 50% 0px #fff;
+}
+.groups_logo +p{
+  font-size: 15px;
+  font-family: "Roboto";
+  color: rgb(165, 164, 195);
+  line-height: 1.2;
+  text-align: center;
+  margin-bottom: 20px;
+  display: block;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.group .rasp{
+  font-size: 14px;
+  font-family: "Caros Medium";
+  color: rgb(60, 30, 146);
+  line-height: 1.2;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.price{
+	display: block;
+	width: 100%;
+	background: #f7f6fc;
+	margin-bottom: 20px;
+	padding-top: 18px;
+	padding-bottom: 18px;
+}
+.price p{
+  font-size: 24px;
+  font-family: "Roboto";
+  color: rgb(118, 117, 145);
+  line-height: 1.2;
+  text-align: center;
+  margin-bottom: 0;
+}
+.groups .group button ,
+.sep_but
+{
+	width: 196px;
+  background-color: rgb(231, 21, 141);
+  box-shadow: 0px 6px 32px 0px rgba(231, 21, 141, 0.48);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 30px;
+  border: none;
+}
+
+.groups .group button p, .sep_but p{
+  font-size: 16px;
+  font-family: "Caros Medium";
+  color: rgb(255, 255, 255);
+  line-height: 3.75;
+  text-align: center;
+  font-weight: 100;
+  margin-bottom: 0;
+}
+.group4 .name span{
+	font-family: "Roboto";
+	font-size: 14px;
+	line-height: 1;
+}
+
+.group4 .name{
+	line-height: 1;
+	margin-bottom: 15px;
+}
+.group4 p{
+	margin-bottom: 36px;
+}
+.group4 .price p{
+	margin-bottom: 0;
+}
+.groups{
+	padding-bottom: 80px;
+}
+
+.modal{
+	position: fixed;
+	top: 200px;
+	width: 340px;
+	background: #fff;
+	border-radius: 10px;
+	padding: 30px 20px;
+	z-index: 9999;
+	display: block;
+	left: 50%;
+	margin-left: -170px;
+	height: 350px;
+display: none;
+}
+.modal h6{
+  font-size: 18px;
+  font-family: "Caros Medium";
+  color: rgb(60, 30, 146);
+  line-height: 1.2;
+  text-align: center;
+  margin-bottom: 22px;
+}
+.modal_input{
+	width: 100%;
+	height: 60px;
+	border-radius: 30px;
+	background: #f7f6fc;
+	border: none;
+  font-size: 15px;
+  font-family: "Roboto";
+  color: rgb(60, 30, 146);
+  line-height: 1.2;margin-bottom: 10px;
+  padding-left: 68px;
+}
+.input_name{
+	background: url(../images/modal_name.png);
+}
+.input_phone{
+	background: url(../images/modal_phone.png);
+}
+.modal_button p{
+  font-size: 16px;
+  font-family: "Caros Medium";
+  color: rgb(255, 255, 255);
+  line-height: 3.75;
+  text-align: center;
+}
+.modal_button{
+  background-color: rgb(231, 21, 141);
+  box-shadow: 0px 6px 32px 0px rgba(231, 21, 141, 0.48);
+	height: 60px;
+	border: none;
+	border-radius: 30px;
+	padding-left: 45px;
+	padding-right: 45px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 15px;
+}
+.modal_bg{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.7);
+	z-index: 5000;
+	display: none;
+}
+.modal_bg.active{
+	display: block;
+}
+.to_close{
+	position: absolute;
+	width: 20px; height: 20px;
+	top: -20px;
+	right: -20px;
+	background: url("../images/close.png") no-repeat 50% 50%;
+	-webkit-background-size: 100% 100%;
+	background-size: 100% 100%;
+	z-index: 8000;
+	
+}
+.modal.active{
+	display: block;
+}
+.map_contacts{
+	position: absolute;
+	left: 0px;
+	top: 60px;
+	background: #fff;
+	padding-left: 50px;
+	padding-top: 45px;
+	padding-bottom: 35px;
+	border-radius: 10px;
+	width: 380px;
+	z-index: 7000;
+}
+.map_contacts h2{
+  font-size: 34px;
+  font-family: "Caros ExtraLight";
+  color: rgb(231, 21, 141);
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+.map_contacts .p1{
+  font-size: 15px;
+  font-family: "Roboto";
+  color: rgb(165, 164, 195);
+  line-height: 1.2;
+  text-align: left;
+  margin-bottom: 15px;
+}
+.map_contacts .p2{
+  font-size: 18px;
+  font-family: "Caros Medium";
+  color: rgb(60, 30, 146);
+  line-height: 1.2;
+  text-align: left;
+  margin-bottom: 20px;
+
+}
