--- a/dance/css/style.css
+++ b/dance/css/style.css
@@ -127,7 +127,7 @@ header{
 
 .nav a:hover { 
 	color: #ff66cc;
-	padding-bottom:24px;
+	padding-bottom:25px;
     border-bottom:2px solid #ff0099;
 }
 
@@ -1180,4 +1180,54 @@ display: none;
   text-align: left;
   margin-bottom: 20px;
 
+}
+a:hover{
+	cursor: pointer;
+}
+.is-sticky .nav ul li.for_sticky a{
+  font-size: 20px;
+  font-family: "Caros Medium";
+  color: rgb(60, 30, 146);
+  line-height: 1.2;
+}
+.nav ul li.for_sticky{
+	display: none;
+}
+#nav{
+	width: 100%;
+  box-shadow: 0px 12px 29px 0px rgba(60, 30, 146, 0.07);
+
+}
+.is-sticky #nav{
+	background: #fff;
+	z-index: 7900;
+}
+.is-sticky .nav ul li.for_sticky{
+	display: inline-block;
+	margin-right: 0;
+	float: right;
+}
+.is-sticky .nav ul li{
+	margin-right: 45px;
+float: left;
+	text-align: center;
+}
+.is-sticky .nav ul{
+	display: block;
+}
+
+.is-sticky .nav ul li a{
+  font-size: 15px;
+  font-family: "Caros Medium";
+  color: rgb(231, 21, 141);
+}
+
+.nav ul li.conta{
+	margin-right: 0;
+}
+.professionals .col-xs-6{
+	position: relative;
+}
+.professionals .review_video_but{
+	top: 114px;
 }
