--- a/porto/css/main.css
+++ b/porto/css/main.css
@@ -32,221 +32,443 @@ input:focus, textarea:focus, keygen:focus, select:focus {
 }
 /*Элемент выше для того, чтобы не было цвето у фокусированных*/
 
-body {
-    font-family: 'Fira Sans', sans-serif;
-	font-size: 16px;
-	min-height: 1500px;
-	position: relative;
-	background: rgba(249,231,215,0.7);
-}
-h1,h2,h3,h4,h5,h6,p{
+p,h1,h2,h3,h4,h5,h6{
 	margin-top: 0;
 	margin-bottom: 0;
 }
+body {
+	font-family: "Gabriola", sans-serif;
+	font-size: 20px;
+	background: rgba(226,232,237,0.2);
+}
+.text-right{
+	text-align: right;
+}
+.text-left{
+	text-align: left;
+}
 header{
-	min-height: 900px;
-	color: #fff;
-	background: url("bgg.jpg");
+	padding-top: 7px;
+	background: url('../img/header_bg.png') no-repeat 50%;
 	-webkit-background-size: cover;
 	background-size: cover;
+	min-height: 600px;
+	height: 100vh;
 	position: relative;
 }
-.container-fluid{
+header .top_menu p{
+	font-family: "Century";
+	font-size: 15px;
+	color: #fff;
+}
+header .top_menu p.bold{
+	font-size: 18px;
+	font-weight: bold;
+}
+header .menu{
+	padding-top: 7px;
+}
+ header .menu p{
+	font-family: "Century";
+	text-transform: uppercase;
+	font-size: 20px;
+	color: #fff;
+	display: inline-block;
+	margin-left: 35px;
+	margin-right: 35px;	
+}
+.logo{
+	width: 60%;
+	margin-left: 20%;
+	margin-top: -50px;
+}
+.left_menu{
+	background: url("../img/menu_left.png") no-repeat 100%;
+	height: 40px;
+	padding-top: 5px;
+	-webkit-background-size: 70% 100%;
+	background-size: 70% 100%;
+	text-align: right;
+}
+.right_menu{
+	background: url("../img/menu_right.png") no-repeat 0%;
+	height: 40px;
+	padding-top: 5px;
+	-webkit-background-size: 70% 100%;
+	background-size: 70% 100%;
+	text-align: left;
+}
+.for_h1{
+	margin-top: 280px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	position: relative;
+	width: 80%;
+}
+h1{
+	font-family: "Romana";
+	font-size: 100px;
+	color: #fff;
+	text-shadow: 4px 4px 8px rgba(0,0,0,0.6);
+	display: inline-block;
+	line-height: 55px;
+}
+.for_h1 .vip{
+font-family: "Semilia";
+font-size: 60px;
+color: #fff;
+display: inline-block;
+vertical-align: top; 
+margin-left: 15px;
+line-height: 1;
+}
+.for_h1 h6{
+	font-family: "Gabriola";
+	font-size: 34px;
+	line-height: 1;
+	color: #fff;
+	font-weight: 100;
+	text-transform: uppercase;
+	margin-top: 7px;
+}
+h2{
+	color: #01061C;
+	font-family: "Cent";
+	font-size: 40px;
+	width: auto;
+	text-align: center;
+	text-transform: uppercase;
+}
+.about__content{
+	color: #01061C;
+	font-size: 27px;
+	line-height: 30px;
+	margin-top: 70px;
+	width: 600px;display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+.about, .about2, .about3{
+	height: 800px;
+	padding-top: 40px;
+	position: relative;
+}
+.about1_img{
+	position: absolute;
+	right: 0px;
+	top: 0;
+	width: 50%;
+	height: 100%;
+	background: url("../img/2.jpg") no-repeat;
+	-webkit-background-size: cover;
+	background-size: cover;
+}
+.about3_img{
+	position: absolute;
+	right: 0px;
+	top: 0;
+	width: 50%;
+	height: 100%;
+	background: url("../img/33.jpg") no-repeat 50%;
+	-webkit-background-size: cover;
+	background-size: cover;
+}
+.about2_img{
+	position: absolute;
+	left: 0px;
+	top: 0;
+	width: 50%;
+	height: 100%;
+	background: url("../img/eat.jpg") no-repeat;
+	-webkit-background-size: cover;
+	background-size: cover;
+}
+.overlay{
+	display: block;
+	width: 100%;
+	height: 100%;
+	 background: linear-gradient(to right, rgba(1,6,28,0.3), rgba(1,6,28,0.6));
+	 /*
+	background: linear-gradient(to right, rgba(1,6,28,0.1), rgba(1,6,28,1);*/
+}
+.about .container, 
+.about2 .container,
+.about3 .container{
+	width: 1450px;
+}
+.about__button{
+	width: 180px;
+	height: 60px;
+	border-radius: 30px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	border: 2px solid #01061C;
+	background: none;
+	margin-top: 150px;
+}
+.about__button p{
+	font-size: 30px;
+	text-transform: uppercase;
+	line-height: 60px;
+}
+section.menu{
+	padding-top: 50px;
+	background: rgba(239,248,249,0.6);
+}
+section.menu h2{
+	margin-bottom: 100px;
+}
+section.menu .container-fluid{
 	padding-left: 0;
 	padding-right: 0;
 }
-.absol_img{
-position: absolute;
-width: 100%;
-height: 100%;
-background: rgba(43,30,16,0.4);
+.menu_big_slider{
+	height: 600px;
+	width: 100%;
 }
-.for-logo{
+.menu_big_slider .item{
+	height: 600px;
 	position: relative;
 }
-.for_logo img{
+.item{
+	display: none;
+}
+.item.active{
+	display: block;
+}
+.menu_big_slider .item1{
+background: url("../img/44.jpg") no-repeat 50%;
+-webkit-background-size: cover;
+background-size: cover;
+} 
+.overlay_item{
+	display: block;
 	position: absolute;
-	top: 50%;
-	margin-top: -55px; 
-	width: 150px;
-	left: 50%;
-	margin-left: -75px;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(1,6,28,0.3);
 }
-.row-menu{
-	background: rgba(178,102,50,0);
-	padding-bottom: 20px;
-	margin-top: 60px;
-	height: 60px;
-}
-.menu_but {
+.item h3{
 	text-align: center;
-}
-.menu_but:hover p{
-	color: #d8976a;
-	cursor: pointer;
-}
-.menu_but p{
-	font-size: 23px;
+	font-family: "Century";
+	font-size: 80px;
 	color: #fff;
-	line-height: 60px;
-	text-transform: uppercase;
-}
-.for_h1{
+	font-weight: 100;
+	position: relative;
+line-height: 6;}
+.menu_button{
+	background: rgba(1,6,28,1);
+	width: 250px;
+	height: 60px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-width: 70%;
-margin-top: 230px;
-position: relative;}
-h1{
-	font-size: 100px;
-	color: #fff;
-	letter-spacing: 0.02em;
-text-align: center;
-	line-height: 1;
-	font-weight: 600;
-    font-family: 'Open Sans Condensed', sans-serif;  
-    font-family: "TimesNewRoman";
+	border-radius: 30px;
+	border: none;
+	position: relative;
 }
-h1 span{
-	font-size: 80px;
-	vertical-align: top;
-}
-h6{
-	font-size: 30px;
-	line-height: 1;
-	margin-top: 5px;
-	text-align: center;
+.menu_button p{
+	font-size: 22px;
 	text-transform: uppercase;
-    font-family: 'Fira Sans', sans-serif;
- 
+	line-height: 60px;
+	position: relative;
+}
+.row_choose .col-xs-4{
+position: relative;
+height: 200px;
+padding-left:0;
+padding-right: 0;
+}
+.item_choose{
+	height: 100%;
+	cursor: pointer;
+}
+.item_choose.active .overlay_item{
+	display: none;
+}
+.item_choose1{
+	background: url('../img/44.jpg') no-repeat 50%;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+	position: relative;
+}
+.item_choose2{
+	background: url('../img/eat.jpg') no-repeat 50%;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+	position: relative;
+}
+.item_choose3{
+	background: url('../img/44.jpg') no-repeat 50%;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+	position: relative;
+}
+.item_choose4{
+	background: url('../img/eat2.jpg') no-repeat 50%;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+	position: relative;
+}
+.item_choose5{
+	background: url('../img/eat3.jpg') no-repeat 50%;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+	position: relative;
+}
+.item_choose6{
+	background: url('../img/eat2.jpg') no-repeat 50%;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+	position: relative;
+}
+
+
+.gallery{
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+.gallery h2{
+	margin-bottom: 100px;
+}
+.gallery .for_img{
+	height: 350px;
+	width: 350px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 15px;
+	background: #8B763D;
+}
+.for_img +p{
+	color: rgba(1,6,28,1);
+	font-family: "Century";
+	font-size: 20px;
+	text-align: center;
+	font-weight: 600;
+}
+.gallery .col-xs-4{
+	margin-bottom: 40px;
+}
+
+.contacts h2{
+	margin-bottom: 80px;
+}
+.contacts p{
+	font-family: "Century";
+	font-size: 25px;
+	color: rgb(1,6,28);
+	text-align: center;
+}
+.contacts .bold{
+	font-size: 28px;
+	font-weight: bold;
+}
+.map{
+	padding-top: 50px;
+	padding-bottom: 0;
+}
+footer{
+	background: rgb(1,6,28);
+	height: 70px;
+	margin-top: -10px;
+	padding-top: 20px;
+}
+footer .col-xs-10 p{
+	text-align: right;
+	font-size: 20px;
+	font-family: "Century";
+	color: #fff;
 	font-weight: 100;
 }
-.row-menu{
-	position: relative;
-}
-.soc_buttons{
-	position: absolute;
-	left:15px;
-	display: block;
-	top: -30px;
-}
-.soc_buttons .soc{
+.soc_vk{
 	display: inline-block;
-	width: 30px;
-	height: 30px;
-	margin-left: 5px;
-	margin-right: 5px;
-	text-align: center;	
-}
-.soc .fa{
-	font-size: 25px;
-	color: #ccc;
-}
-.soc .fa:hover{
-	color: #d8976a;
+	width: 35px;
+	height: 35px;
+	background: url("../img/soc_vk.png") 50%;
+	-webkit-background-size: 100% 100%;
+	background-size: 100% 100%;
+	margin-right: 20px;
 	cursor: pointer;
 }
-.for_button{
-	margin-top: 220px;
-	position: relative;
+.soc_inst{
+	display: inline-block;
+	width: 35px;
+	height: 35px;
+	background: url("../img/soc_inst.png") 50%;
+	-webkit-background-size: 100% 100%;
+	background-size: 100% 100%;
+	cursor: pointer;
 }
-.reserve{
+.about h2{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 10px 35px;
-	border-radius: 10px;
-	border: 2px solid #fff;
-	background: none;
+	width: 325px;
+	border-bottom: 2px solid #8B763D;
 }
-.reserve:hover{
-	background: #fff;
+section.menu h2{
+display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 160px;
+	border-bottom: 2px solid #8B763D;
 }
-.reserve:hover p{
-	color: #2b1e10;
+.gallery h2{
+display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 255px;
+	border-bottom: 2px solid #8B763D;
 }
-.reserve p{
-	text-transform: uppercase;
-	font-family: 'Roboto Condensed', sans-serif;
-
-	font-size: 20px;
-	color: #fff;
+.contacts h2{
+display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 275px;
+	border-bottom: 2px solid #8B763D;
 }
 h2{
-	text-align: center;
-	font-size: 42px;
-	font-family: 'Fira Sans', sans-serif;
-
-	text-transform: uppercase;
+	line-height: 52px;
+}
+.lan{
+	position: absolute;
+	top: 20px;
+	right: 30px;
 	display: block;
+	width: 100px;
 }
-
-.section1{
-	padding-top: 35px;
-	min-height: 900px;
-}
-.for_tabs{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 60%;
-	border-radius: 20px;
-	border: 2px solid #2b1e10;
-	position: relative;
-	margin-top: 35px;
-}
-.for_tabs .tab{
-	display: inline-block;
-width: 33.33%;
-margin-left: 0;margin-right: 0;
-float: left;
-text-align: center;
-padding: 15px;
-}
-.tab.active{
-	background: #2b1e10;
-}
-.tab.active p{
+.lan p{
+	font-family: "Century";
+	font-size: 18px;
 	color: #fff;
 }
-.tab_1{
-border-radius: 15px 0px 0px 15px;
-border-right: 0.5px solid #2b1e10;
+.lan .span1{
+	text-decoration: underline;
 }
-
-.tab:hover{
-	cursor: pointer;
-}
-.for_tabs .tab_3{
-border-radius: 0px 15px 15px 0px;
-float: right; 
-border-left: 0.5px solid #2b1e10;
-}
-.for_tabs .tab p{
-	font-size: 21px;
-	font-family: 'Roboto Condensed';
-
-	text-transform: uppercase;
-}
-.content_history p{
-	color: #2b1e10;
-	font-size: 19px;
-	letter-spacing: 0.01em;
-	font-family: 'Roboto Condensed';
+#bgndVideo{
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: 100;
 
 }
-.content{
-	padding-top: 80px;
+#wrapper_mbYTP_bgndVideo{
+	position: absolute !important;
 }
-.history_img{
-	width: 90%;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+
+body{
+	z-index: 1000;
+}.my{
+	position: relative;
+	overflow: hidden;
 }
-.is-sticky .for_logo img{
-	height: 60px;
-	width: auto;
-	margin-left: -30px;
+header{
+	background: rgba(0,0,0,0.6);
 }
