--- a/naves/css/mystyle.css
+++ b/naves/css/mystyle.css
@@ -25,11 +25,12 @@ body{
     color: #fff;
     padding-top: 10px;
     position: relative;
+    height: 100%;
 }
 .absol_dark{
     position: absolute;
     width: 100%;
-    height: 110%;
+    height: 950px;
     top: 0;
     left: 0;
     background: rgba(0,0,0,0.6);
@@ -221,4 +222,13 @@ h1 +p{
     display: block;
     margin-left: auto;margin-right: auto;
     margin-top: 30px;
+}
+.my_cont{
+    height: 315px;
+    transition: 1s ease-in all;
+}
+.my_cont.active{
+    height: 0;
+    overflow: hidden ;
+    transition: 1s ease-in all;
 }
