--- a/naves/css/mystyle.css
+++ b/naves/css/mystyle.css
@@ -356,12 +356,14 @@ h1 +p{
     font-size: 20px;
     line-height: 1.5;
     color: #ccc;
+       text-shadow: none;
     padding-bottom: 15px;
  }
  .text-rr .addr{
     font-size: 14px;
     line-height: 1;
     color: #ccc;
+       text-shadow: none;
  }
 
  #steps form button{
@@ -369,6 +371,8 @@ h1 +p{
     border: none;
     text-shadow: none;
     color: #fff;
+
+
 
  }
  #steps form button:hover{
