--- a/naves/css/mystyle.css
+++ b/naves/css/mystyle.css
@@ -230,13 +230,19 @@ h1 +p{
     width: 75px;
     border: 1px solid rgb(248, 174, 78);
     border-radius: 7px;
-    margin-left: 20px;
+  
     margin-right: 20px;
     float: none;
     color: #000;
     font-family: "LatoB";
     font-size: 24px;
     background: #fff;
+}
+#steps form .step4 p{
+    text-align: center;
+}
+#steps form .step4{
+    margin-left: -70px;
 }
 #steps form .step2 p .for_item,
 #steps form .step3 p .for_item{
@@ -268,7 +274,9 @@ h1 +p{
     margin-right: 10px;
     background: rgba(0,0,0,0.7);
 }
-
+#wrapper #steps form .step.last label{
+    display: none;
+}
 #steps .step input:checked + label .for_item{
  
     background: url("../images/galka.png") no-repeat 63% 50%;
@@ -295,7 +303,6 @@ h1 +p{
     padding-left: 10px;
     font-size: 25px;
     color: #fff;
-    float: left;
 }
 .price #price{
     color: #F8AE4E;
@@ -343,8 +350,6 @@ h1 +p{
     bottom: 0px;
     left: 0;
     width: 100%;
-
-
  }
  .text-ll a{
     font-size: 18px;
@@ -361,7 +366,6 @@ h1 +p{
  .text-cc a{
     font-size: 14px;
     color: #ccc;
-    text-decoration: underline;
     padding-top: 40px;
     display: block;
     text-align: center;
@@ -395,17 +399,53 @@ h1 +p{
     text-shadow: none;
  }
  #steps form .last input:not([type=radio]){
-    background: rgba(0,0,0,0.6);
-    border-radius: 5px;
-    border: 2px solid #fff;
+    background: rgb(68,68,68);
+    border-radius: 4px;
+    border: 1px solid #fff;
     color: #fff;
     padding: 10px 15px;
     float: none; margin-left: 60px;
+    height: 46px;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 19px;
+    width: 280px;
  }
  #steps form p{
     text-align: left;
     margin-left: 0;
  }
-  #steps form .last input#phone{
-    margin-left: 10px;
-  }
+
+#wrapper{
+    text-align: center;
+}
+.steps{
+    text-align: center;
+}
+.step{
+    text-align: center;
+}
+.sale_box{
+    text-align: center;
+}
+.step.last{
+    width: 800px;
+}
+#steps form .step.last p{
+    width: 100%;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+.last h5{
+    color: rgb(221, 221, 221);
+    font-size: 26px;
+    line-height: 34px;
+    background: none;
+    text-align: center;
+    text-shadow: none;
+    font-family: "LatoB";
+    font-weight: 100;
+    text-align: center;
+}
