--- a/naves/css/mystyle.css
+++ b/naves/css/mystyle.css
@@ -23,7 +23,7 @@ body{
     -webkit-background-size: cover;
     background-size: cover;
     color: #fff;
-    padding-top: 10px;
+    padding-top: 20px;
     position: relative;
     height: 100%;
     min-height: 100vh;
@@ -456,7 +456,7 @@ h1 +p{
  #last_butt #special{
   
     position: absolute;
-    top: -105px;
+    top: -165px;
     left: -385px;
     width: 280px;
     opacity: 0 !important;
@@ -465,3 +465,228 @@ h1 +p{
  #last_butt #special.active{
     display: block;
  }
+ .absol_icon{
+    width: 900px;
+    margin-left: -450px;
+    position: absolute;
+    top: 5px;left: 50%;
+    background: rgba(25,25,25,1);
+    height: 300px;
+    border-radius: 10px;
+ }
+ .absol_icon .left_cont{
+    width: 50%;
+    float: left;
+    height: 100%;
+    text-align: center;
+    padding-top: 30px;
+ }
+  .absol_icon .left_cont img{
+    width: 78%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .absol_icon .right_cont{
+    width: 49%;
+    float: left;margin-left: 1%;
+    text-align: center;
+     padding-top: 30px;
+  }
+  .absol_icon .right_cont h2{
+    font-size: 21px;
+    line-height: 25px;
+    color: #fff;
+    font-family:"LatoB" ;
+    font-weight: 100;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    display: inline-block;
+  }
+  .absol_icon .right_cont p{
+    font-size: 16px;
+    color: #fff;
+    text-align: left;
+    line-height: 30px;
+  }
+  .absol_icon .right_cont p span{
+    color: rgb(248, 174, 78); padding-left: 10px;
+  }
+   .absol_icon .right_cont p.text{
+    margin-top: 25px;
+    line-height:19px;
+    font-family: "LatoB";
+    font-weight: 400;
+   }
+   .for_im{
+    float: right;height: 140px;
+    width: 140px;
+    margin-right: 30px;
+    border-radius: 50%;
+    border: 1px solid rgb(248, 174, 78);
+    margin-top: -20px;
+    background: url("../images/stolb.png") no-repeat 50% 50%;
+   }
+   .absol_icon{
+    opacity: 0;
+    visibility: hidden;
+    transition: 1.5s ease-in all;
+   }
+   .absol_icon.active{
+   opacity: 1 ;
+   visibility: visible;
+  
+    transition: 0.5s ease-in all;
+   }
+   .icon{
+    cursor: pointer;
+   }
+   footer{
+    cursor: default;
+   }
+   .absol_bg_form{
+    position: absolute; 
+    top: 0; 
+    left: 0;    
+    width: 100%;    
+    height: 100%;   
+    z-index: 4000;
+    background:   rgba(0,0,0,0.9);
+    display: none;
+
+   }
+   .absol_form{
+    position: absolute;
+    top: 150px;
+    left: 50%;
+    width: 480px;
+    margin-left: -240px;
+    background: #fff;
+    border-radius: 10px;
+    height: 430px;
+    z-index: 5000;
+    padding: 10px;
+    display: none;
+   }
+   .absol_form h3{
+font-size: 24px;
+line-height: 29px;
+font-weight: 100;
+font-family: "LatoB";
+margin-bottom: 30px;
+color: rgb(63, 60, 79);
+   }
+   .absol_form_in{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    border: 2px solid rgb(248, 174, 78);
+    padding-top: 50px;
+    text-align: center;
+    padding-left: 30px;
+    padding-right: 30px;
+    position: relative;
+   }
+.ord{
+    margin-bottom: 30px;
+}
+.ord img{
+    display: inline-block;
+    width: 22px;
+    float: left;
+    height: 22px;
+    margin-right: 15px;
+}
+.absol_form p{
+font-size: 16px;
+font-weight: 400;
+line-height: 19px;
+color: rgb(63, 60, 79);
+text-align: left;
+}
+.name_i{
+    border: 1px solid rgb(248, 174, 78);
+    height: 40px;
+    border-radius: 20px;
+    width: 100%;
+    display: block;
+    padding-left: 55px;
+    font-size: 14px;
+font-weight: 400;
+background: none;
+color: rgb(63, 60, 79);
+font-family: "LatoB";
+font-weight: 500;
+text-align: left;
+opacity: 1;
+margin-top: 20px;
+margin-bottom: 20px;
+background: url("../images/form_i.png") no-repeat 30px 10px;
+}
+.tel_i{
+    border: 1px solid rgb(248, 174, 78);
+    height: 40px;
+    border-radius: 20px;
+    width: 100%;
+    display: block;
+    padding-left: 55px;
+    font-size: 14px;
+font-weight: 400;
+background: none;
+color: rgb(63, 60, 79);
+font-family: "LatoB";
+font-weight: 500;
+text-align: left;
+opacity: 1;
+margin-top: 20px;
+margin-bottom: 20px;
+background: url("../images/form_tel.png") no-repeat 30px 10px;
+}
+.absol_form button{
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    background: url(../images/but_bg.png) no-repeat 50%;
+    -webkit-background-size: 100% auto;
+    background-size: 100% auto;
+    border: none;
+    text-align: center;
+}
+.absol_form button:hover{
+    background: url(../images/but_hov.png) no-repeat 50%;
+    -webkit-background-size: 100% auto;
+    background-size: 100% auto;
+}
+.absol_form button p{
+    font-size: 14px;
+    color: #000;
+    text-transform: uppercase;
+    font-family: "LatoB";
+    text-align: center;
+    font-weight: 100;
+    display: none;
+}
+*::-webkit-input-placeholder {
+    color: #666;
+    opacity: 1;
+}
+*:-moz-placeholder {
+    color: #666;
+    opacity: 1;
+}
+*::-moz-placeholder {
+    color: #666;
+    opacity: 1;
+}
+*:-ms-input-placeholder {
+    color: #666;
+    opacity: 1;
+}
+.absol_form.active{
+    display: block;
+}
+   .absol_bg_form.active{
+    display: block;
+}
+#tel{
+    cursor: pointer
+}
