--- a/borodist/css/media.css
+++ b/borodist/css/media.css
@@ -33,7 +33,7 @@ body{
 .owl-carousel.third__slider .owl-nav .owl-next{
 	right: 10px;
 }
-h5,h3,h6{
+h5,h3,h6, span{
 	font-weight: 100 !important;
 }
 footer .footer__logo{
