--- a/naves/css/mystyle.css
+++ b/naves/css/mystyle.css
@@ -16,10 +16,16 @@
     font-style: normal;
     font-weight: normal;
 }
+@font-face{
+    font-family: "LatoBl";
+    src: url("Lato-Black.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
 body{
     font-family: "LatoL";
     font-weight: 700;
-    background: url("../images/2020.jpg") no-repeat 50% 50%;
+    background: url("../images/2020.png") no-repeat 50% 50%;
     -webkit-background-size: cover;
     background-size: cover;
     color: #fff;
@@ -44,28 +50,31 @@ body{
     text-align: center;
 }
 .logo{
-    width: 215px;
+    width: 220px;
     height: 50px;
     display: block;
-    margin-left: auto;
-    border: 4px solid #fff;
+    border: 5px solid #fff;
     border-radius: 10px;
     text-align: center;
     padding-top: 5px;
+    
 }
 .logo p{
-    font-size: 22px;
+    font-size: 25px;
     text-transform: uppercase;
     font-weight: 700;
+    font-family: "LatoBl";
+  text-shadow: 0px 3px 1.84px rgba(50, 50, 50, 0.65);
+
 }
 .logo_a +p{
     font-size: 14px;
     text-transform: uppercase;
-    line-height: 17px;
     margin-top: 4px;
-    text-align: right;
+    text-align: left;
     font-family: "LatoL";
-    padding-right: 24px;
+    padding-left: 43px;
+    line-height: 1.5;
 }
 #wrapper{
     background: none;
@@ -78,23 +87,40 @@ body{
     width: 5000px !important;
 }
 .center_text{
-    font-size: 18px;
-    line-height: 22px;
-    text-align: center;   
+    padding-top: 5px;
+  font-size: 18px;
+  font-family: "Lato";
+  color: rgb(255, 255, 255);
+  line-height: 1.219;
+  text-align: center;
+  font-weight: 700;
 }
 .center_text span{
-    line-height: 36px;
+    line-height: 35px;
 }
+
 .right_text{
     font-size: 22px;
     font-weight: 700;
     line-height: 28px;
-    text-align: left;
+    text-align: right;
     font-family: "LatoB";
     color: rgb(239, 162, 74);
     font-weight: 900;
-    padding-top: 20px;
+    padding-top: 10px;
+    padding-left: 0; 
+}
+.right_text img{
+    display: inline-block;
+    margin-right: 15px;
+}
+.right_text p{
+    display: inline-block;
+}
+.top .container .col-xs-4{
+    width: 33%;
     padding-left: 0;
+    padding-right: 0;
 }
 .right_text button{
     width: 190px;
@@ -118,19 +144,25 @@ h1{
     line-height: 41px;
     text-transform: uppercase;
    font-weight: 100;
-    font-family: "LatoB";
-    margin-top: 30px;
+    margin-top: 70px;
+  font-size: 34px;
+  font-family: "Lato";
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  line-height: 1;
+  text-align: center;
+  font-weight: 900;
+  letter-spacing: 0.03em;
+margin-bottom: 0;
 }
 h1 span{
+    line-height: 80px;
     font-size: 29px;
-    line-height: 50px;
 }
 h1 +p{
-    padding-top: 5px;
     font-size: 29px;
-    font-family: "LatoB";
+    font-family: "Lato";
     font-weight: 100;
-    line-height: 28px;
     margin-bottom: 40px;
 }
 .icon{
@@ -140,23 +172,32 @@ h1 +p{
     margin-left: auto;
     margin-right: auto;
     border-radius: 50%;
-    border: 2px solid rgb(239, 162, 74) ;
 }
 .icon +p{
     font-size: 18px;
     line-height: 22px;
     font-weight: 900;
     margin-top: 7px;
-    font-family: "LatoL";
+    font-family: "Lato";
+    font-weight: 100;
+
 }
-.hhrow .col-xs-3{
-    width: 20%;
+.hhrow{
+    margin-left: auto;
+    margin-right: auto;
+    width: 640px;
+}
+.hhrow .col-xs-4{
+    padding-left: 0;padding-right: 0;
+}
+.pto{
+    line-height: 1;
 }
 .col-xs-2{
     width: 20%;
 }
 #wrapper{
-    margin-top: 20px;
+    margin-top: 0px;
     border: none;
     background: rgba(0,0,0,0.6);
     box-shadow: none;
@@ -347,44 +388,71 @@ h1 +p{
  }
  footer{
     background: rgba(0,0,0,0.8);
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 25px;
     position: absolute;
     bottom: 0px;
     left: 0;
     width: 100%;
+    height: 100px;
  }
  .text-ll a{
     font-size: 18px;
-    text-align: center;
+    text-align: left;
     color: #ccc;
-    padding-bottom: 15px;
+    font-family: "LatoBl";
+    padding-bottom: 10px;
     display: block;
+  color: rgb(202, 202, 202);
+  text-transform: uppercase;
+  text-shadow: 0px 3px 1.84px rgba(50, 50, 50, 0.65);
+
  }
  .text-ll a +p{
-    font-size: 15px;
-    text-align: center;
+    text-align: left;
     color: #ccc;
+  font-size: 18px;
+  font-family: "Lato";
+  font-weight: 100;
+  color: rgb(202, 202, 202);
+  text-shadow: 0px 3px 1.84px rgba(50, 50, 50, 0.65);
+
  }
+
  .text-cc a{
-    font-size: 14px;
-    color: #ccc;
-    padding-top: 40px;
-    display: block;
+    display: inline-block;
+    vertical-align: bottom;
     text-align: center;
+  font-size: 15px;
+  font-family: "Lato";
+  color: rgb(202, 202, 202);
+  margin-top: 50px;
+  font-weight: 100;
+
  }
  .text-rr .tel{
     font-size: 20px;
     line-height: 1.5;
     color: #ccc;
        text-shadow: none;
-    padding-bottom: 15px;
+    padding-bottom: 5px;
+    font-family: "LatoB";
+    font-weight: 100;
+      color: rgb(202, 202, 202);
+       text-align: right;
+
  }
  .text-rr .addr{
     font-size: 14px;
     line-height: 1;
     color: #ccc;
-       text-shadow: none;
+     text-shadow: none;
+  font-size: 14px;
+  font-family: "Lato";
+  color: rgb(202, 202, 202);
+  line-height: 1.211;
+  text-align: right;
+  font-weight: 100;
+
  }
 
  #steps form button{
@@ -456,11 +524,12 @@ h1 +p{
  #last_butt #special{
   
     position: absolute;
-    top: -165px;
-    left: -385px;
-    width: 280px;
+    
     opacity: 0 !important;
     display: none;
+    top: -100px;
+    left: -417px;
+    width: 310px;
 }
  #last_butt #special.active{
     display: block;
@@ -652,7 +721,7 @@ background: url("../images/form_tel.png") no-repeat 30px 10px;
     text-align: center;
 }
 .absol_form button:hover{
-    background: url(../images/but_hov.png) no-repeat 50%;
+    background: url(../images/but_hov.jpg) no-repeat 50%;
     -webkit-background-size: 100% auto;
     background-size: 100% auto;
 }
@@ -695,4 +764,86 @@ background: url("../images/form_tel.png") no-repeat 30px 10px;
 }
 #steps form #to_get.active{
     display: block;
+}
+
+.container{
+    width: 870px;
+    padding-left: 0;
+    padding-right: 0;
+}
+#wrapper{
+    margin-left: auto;
+    margin-right: auto;
+}
+.sale_box{
+    display: none;
+}
+.sale_form.active{
+    display: none;
+}
+footer{
+    padding-top: 20px;
+}
+.text-ll a{
+    margin-top: 5px;
+}
+#wrapper h5{
+    color: #fff;
+    margin-bottom: 50px;
+}
+.for_item{
+    width: 32px;
+    height: 32px;
+}
+#steps form .step1 p{
+    width: 200px;
+    margin: 0;
+}
+#steps form .step1 legend + p{
+    margin-left: 80px;
+}
+#steps{
+    height: 390px;
+}
+#steps form .step2 p,
+#steps form .step3 p,
+#steps form .step4 p  
+{
+    margin-left: 80px;
+}
+#wrapper #steps form .step3 legend,
+#wrapper #steps form .step4 legend
+{
+    text-align: left;
+    margin-left: 80px;
+}
+#steps form .step4 p{
+    text-align: left;
+}
+#steps form .step4 p input{
+    border: none;
+    width: 90px;
+    margin-left: 5px;
+}
+#steps form .step p label{
+  font-size: 20px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 1.098;
+}
+#steps form .last input:not([type=radio]){
+    border: none;
+    width: 280px;
+    background: #fff;
+}
+#navigation ul{
+    margin-left: 80px;
+}
+#navigation ul li a{
+    padding-left: 5px;
+    padding-right: 40px;
+    background: url("../images/arr.png") 100% 50% no-repeat;
+}
+.logo{
+    width: 250px;
 }
