--- a/borodist/libs/owl-carousel/owl.carousel.css
+++ b/borodist/libs/owl-carousel/owl.carousel.css
@@ -54,7 +54,7 @@
   .owl-carousel .owl-nav .owl-prev,
   .owl-carousel .owl-nav .owl-next,
   .owl-carousel .owl-dot {
-    cursor: pointer;
+   cursor: url("../../img/cur/LinkSelect.cur"), pointer;
     cursor: hand;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -76,7 +76,7 @@
     -ms-user-select: none;
     user-select: none; }
   .owl-carousel.owl-grab {
-    cursor: move;
+  cursor: url("../../img/cur/Move.cur"), move;
     cursor: grab; }
   .owl-carousel.owl-rtl {
     direction: rtl; }
@@ -142,7 +142,7 @@
   margin-left: -40px;
   margin-top: -40px;
   background: url("owl.video.play.png") no-repeat;
-  cursor: pointer;
+cursor: url("../../img/cur/LinkSelect.cur"), pointer;
   z-index: 1;
   -webkit-backface-visibility: hidden;
   transition: transform 100ms ease; }
