--- a/borodist/css/main.css
+++ b/borodist/css/main.css
@@ -39,8 +39,8 @@ body {
 	 font-family: 'OzHandicraft WGL4 BT Roman', arial;
 	font-size: 16px;
 	background: url("../img/main_bg.png") no-repeat 50%;
-	-webkit-background-size: cover;
-	background-size: cover;
+	-webkit-background-size: 100% 100%;
+	background-size: 100% 100%;
 	min-height: 3000px;
 	position: relative;
 }
@@ -718,7 +718,7 @@ opacity:1;
 	background-color: #8893aa;
 }
 .header__next{
-	cursor: pointer;
+	cursor: url("../img/cur/LinkSelect.cur"), url("../img/cur/LinkSelect.cur"), pointer;
 }
 
 .bg_modal{
@@ -743,7 +743,7 @@ opacity:1;
 }
 .modal{
 	width: 900px;
-	height: 700px;
+	height: auto;
 	z-index: 8100;
 	position: fixed;
 	top: 100px;
@@ -755,6 +755,7 @@ opacity:1;
 	padding-top: 50px;
 	padding-left: 70px;
 	padding-right: 80px;
+	padding-bottom: 30px;
 	visibility: hidden;
 	opacity: 0;
 	-webkit-transition: all 1s ease-in;
@@ -769,12 +770,11 @@ opacity:1;
 	transition: all 1s ease-in;
 }
 .modal h2{
-	width: 620px;
+	width: 470px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	height: 130px;
-	background: url("../img/h2_modal_bg.png") no-repeat;
 	-webkit-background-size: 100% auto;
 	background-size: 100% auto;
 	margin-bottom: 40px;
@@ -893,6 +893,7 @@ transition: all 1s ease-in;
   height: 62px;
   border-radius: 31px;
   display: block;
+  margin-top: 40px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -919,8 +920,54 @@ transition: all 1s ease-in;
 	width: 41px;
 	height: 41px;
 	background: url("../img/cross.png") no-repeat;
-	cursor: pointer;
+	cursor: url("../img/cur/LinkSelect.cur"), pointer;
 }
 label{
-	cursor: pointer;
+	cursor: url("../img/cur/LinkSelect.cur"), pointer;
+}
+.video{
+	position: relative;
+	width: 500px;
+}
+.play{
+	width: 97px;
+	height: 85px;
+	position: absolute;
+	top: 50%;
+	margin-top: -42px;
+	left: 50%;
+	margin-left: -48px;
+	background: url("../img/play.png") no-repeat;
+	-webkit-background-size:  100% 100%;
+	background-size:  100% 100%;
+}
+
+#p_next{
+	width: 42px;
+	height: 60px;
+	position: absolute;
+	right: -10px;
+	top: 100px;
+	background: url("../img/slider_next.png") no-repeat;
+	z-index: 8000;
+	cursor: url("../img/cur/LinkSelect.cur"), pointer;
+}
+#p_prev{
+	width: 42px;
+	height: 60px;
+	position: absolute;
+	left: -10px;
+	top: 100px;
+	background: url("../img/slider_prev.png") no-repeat;
+	z-index: 8000;
+	cursor: url("../img/cur/LinkSelect.cur"), pointer;
+}
+.owl-carousel .owl-nav .owl-prev{
+	left: -50px;
+}
+body{
+	cursor:  url("../img/cur/NormalSelect.cur"),  	crosshair;
+}
+a, .button, .owl-prev, .owl-next, button{
+cursor: url("../img/cur/LinkSelect.cur"), pointer;
 }
